--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Cousine&display=swap");
     </style>
   </head>
-  <body>
+  <body class="bg-slate-500">
     <div id="root"></div>
     <script>
       window.global = window;
