--- a/index.html
+++ b/index.html
@@ -1,19 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Cousine&display=swap");
-    </style>
-  </head>
-  <body class="bg-slate-500">
-    <div id="root"></div>
-    <script>
-      window.global = window;
-    </script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link
+    rel="icon"
+    href="journal.png"
+  >
+  <meta
+    name="theme-color"
+    content="#64748b"
+  />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
+  <link
+    rel="apple-touch-icon"
+    href="apple-icon-180.png"
+  >
+  <meta
+    name="apple-mobile-web-app-capable"
+    content="yes"
+  >
+  <title>lostRabbit</title>
+  <meta
+    name="description"
+    content="A tiny journal for quick thoughts"
+  >
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Cousine&display=swap");
+  </style>
+</head>
+
+<body class="bg-slate-500">
+  <div id="root"></div>
+  <script>
+    window.global = window;
+  </script>
+  <script
+    type="module"
+    src="/src/main.tsx"
+  ></script>
+</body>
+
 </html>
